# verifiers

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  BATCH_SAMPLER.md  MANIFEST.in  MODAL_README.md  Makefile  MockAsyncOpenAI_summary.md  OLD.md  PYDANTIC_MIGRATION_GUIDE.md  PYDANTIC_USAGE_GUIDE.md  README.md  TEST_PLAN.md  actionable_checklist.md  check_training.sh  continuous_monitor.py  docs_detailed_analysis.md  docs_improvement_plan.md  documentation_update_summary.md  endpoints.py  executive_summary.md  grpo_data_flow.md  hub.md  livecodebench_eval_results.txt  livecodebench_implementation_example.py  livecodebench_port_plan.md  livecodebench_port_summary.md  livecodebench_security_config.yaml  llm_server.py  mock_client_summary.md  monitor_training.py  multiturn_dependencies_guide.md  notes.md  pyproject.toml  pytest.ini  results.jsonl  (+21 more)
.cursor/: rules
.github/: pull_request_template.md  style.yaml
environments/aidanbench/: README.md  aidanbench.py  pyproject.toml  question_list.py
environments/arc_agi_3/: README.md  arc_agi_3.py  pyproject.toml
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/1c109c41/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/4041c9fb/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/7a5fcb34/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/8060427b/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/8bf05aed/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/9228bc3e/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-4.1-mini/b00dedf1/: metadata.json  results.jsonl
environments/arc_agi_3/outputs/evals/arc-agi-3--gpt-5/3d171693/: metadata.json  results.jsonl
environments/doublecheck/: README.md  doublecheck.py  pyproject.toml
environments/enigmata/: README.md  enigmata.py  pyproject.toml
environments/futurex_past/: README.md  futurex_past.py  pyproject.toml
environments/futurex_past/scripts/: eval_balanced.py  eval_by_level.py  eval_conservative.py  smoke_futurex_past.py
environments/gpqa/: README.md  gpqa.py  pyproject.toml
environments/gsm8k/: README.md  gsm8k.py  pyproject.toml
environments/livecodebench/: KUBERNETES_USAGE.md  README.md  kubernetes_sandbox.py  livecodebench.py  pyproject.toml
environments/livecodebench_port/: README.md  livecodebench_port.py  pyproject.toml
environments/luanti/: README.md  luanti.py  pyproject.toml
environments/math_python/: README.md  math_python.py  pyproject.toml
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/25f52552/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/49a7458f/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/578769a7/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/6b596d7f/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/6bcfbfcb/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/976454fe/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/97cb0229/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-4.1-mini/dbaac595/: metadata.json  results.jsonl
environments/math_python/outputs/evals/math-python--gpt-5-nano/cb7a1799/: metadata.json  results.jsonl
environments/mcp_env/: README.md  mcp_env.py  pyproject.toml
environments/mcp_env/outputs/evals/mcp-env--gpt-4.1-mini/343b2bde/: metadata.json  results.jsonl
environments/mcp_env/outputs/evals/mcp-env--gpt-4.1-mini/468ee950/: metadata.json  results.jsonl
environments/mcp_env/src/: mcp_server_connection.py  mcp_tool_wrapper.py  models.py
environments/mcp_tool/: README.md  fastmcp_runner.py  mcp_tool.py  pyproject.toml
environments/misguided_attention/: README.md  misguided_attention.py  pyproject.toml
environments/mmmu/: README.md  mmmu.py  pyproject.toml
environments/reasoning_gym_env/: README.md  pyproject.toml  reasoning_gym_env.py
environments/reverse_text/: README.md  pyproject.toml  reverse_text.py
environments/search_r1_ish/: README.md  exa_env.py  preprocess_wiki.py  pyproject.toml  search_r1_ish.py
environments/search_r1_ish/configs/: infer.toml  orch.toml  train.toml
environments/self_reward/: README.md  pyproject.toml  self_reward.py
environments/sentence_repeater/: README.md  pyproject.toml  sentence_repeater.py
environments/simpleqa/: README.md  pyproject.toml  simpleqa.py
environments/tau2_bench/: IMPLEMENTATION.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_FORMAT_NOTES.md  PORTING_ANALYSIS.md  PROJECT_STATUS.md  README.md  __init__.py  orchestrator.py  pyproject.toml  requirements.txt  tau2_bench.py  test_tau2.py  tool_adapter.py
environments/terminalbench/: README.md  pyproject.toml  terminalbench.py  vf_terminalbench.py
environments/tool_test/: README.md  pyproject.toml  tool_test.py
environments/toxicity_explanation/: README.md  pyproject.toml  toxicity_explanation.py
environments/vf_aime2025/: README.md  pyproject.toml  vf_aime2025.py
environments/vf_aime2025/reports/: vf-aime2025--v0.1.0--model=gpt-4.1--n=-1--r=1--args=noargs.html  vf-aime2025--v0.1.1--model=gpt-4.1-mini--n=-1--r=1--args=noargs.html
environments/vf_bfcl_single_turn/: README.md  __init__.py  pyproject.toml  vf_bfcl_single_turn.py
environments/vf_math500/: README.md  pyproject.toml  vf_math500.py
environments/vf_math500/reports/: vf-math500--v0.1.0--model=gpt-4.1-mini--n=30--r=1--args=noargs.html  vf-math500--v0.1.3--model=gpt-4.1-mini--n=5--r=3--args=noargs.html  vf-math500--v0.1.3--model=gpt-4.1-mini--n=50--r=1--args=noargs.html
environments/vf_search_r1/: PLANNING.md  README.md  pyproject.toml  vf_search_r1.py
(+482 files in other folders)
