[project]
name = "arc-agi-3"
description = "ARC-AGI-3 environment using the official agent API"
tags = ["train", "eval"]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "arc-agi-3-agents @ git+https://github.com/arcprize/ARC-AGI-3-Agents",
    "verifiers>=0.1.3.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["arc_agi_3.py"]
