[project]
name = "arc-agi-3"
description = "ARC-AGI-3 environment using the official agent API"
tags = ["train", "eval"]
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "arc-agi-3-agents",
    "httpx>=0.27",
    "pydantic>=2.7",
    "verifiers>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["arc_agi_3.py"]

[tool.uv.sources]
arc-agi-3-agents = { git = "https://github.com/willccbb/ARC-AGI-3-Agents.git" }