[project]
name = "futurex-past"
version = "0.1.0"
description = "FutureX-Past historical QA dataset (environment scaffold)"
tags = ["futurex", "qa", "single-turn", "train", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["futurex_past.py"]

