[project]
name = "gpqa"
version = "0.1.0"
description = "GPQA environment"
tags = ["gpqa", "single-turn", "eval", "multiple-choice"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpqa.py"]
