[project]
name = "luanti"
version = "0.1.0"
description = "Luanti (Minetest) code generation environment for verifiers"
tags = ["luanti", "minetest", "code-generation", "single-turn", "lua", "game-development", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["luanti.py"]