[project]
name = "math-python"
description = "Solve math problems using Python"
tags = ["math-python", "multi-turn", "code-execution", "tool-use", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
    "math-verify>=0.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["math_python.py"]
