[project]
name = "math-python"
description = "Solve math problems using Python in a sandbox environment"
tags = ["tool-use", "math", "sandbox", "train"]
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.5.dev1",
    "math-verify>=0.8.0",
    "prime>=0.3.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
