[project]
name = "mcp-env"
description = "MCP Environment"
tags = ["train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.14.1",
    "python-dotenv>=1.1.1",
    "verifiers>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mcp_env.py"]
