[project]
name = "mmmu"
description = "Multimodal benchmark environment"
tags = ["multimodal", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
    "pillow>=11.3.0",
    "datasets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mmmu.py"]
