[project]
name = "reverse-text"
version = "0.1.0"
description = "Reverse a given text"
tags = ["reverse-text", "single-turn", "train", "eval"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reverse_text.py"]
