[project]
name = "self-reward"
version = "0.1.1"
description = "Environment models self-rewarding their own responses"
tags = ["self-reward", "single-turn", "llm-judge", "knowledge", "train"]
dependencies = [
    "verifiers>=0.1.2.post1",
    "datasets",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["self_reward.py"]
