[project]
name = "simpleqa"
version = "0.1.1"
description = "SimpleQA eval"
tags = ["simpleqa", "single-turn", "llm-judge", "knowledge"]
dependencies = [
    "verifiers>=0.1.2.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["simpleqa.py"]
