[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tau2_bench"
version = "0.1.0"
description = "τ²-bench implementation for verifiers"
dependencies = [
    "pydantic>=2.0.0",
    "datasets>=2.0.0",
]

[tool.setuptools]
py-modules = ["tau2_bench"]