[project]
name = "verifiers-terminalbench"
version = "0.1.0"
dependencies = [
    "verifiers>=0.1.0",
    "docker>=6.0.0",
    "datasets>=2.14.0",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.17.0",
    "terminal-bench>=0.2.16,<0.3.0; python_version >= '3.12'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_terminalbench.py"]
