[project]
name = "tool-test"
description = "Test environment for tool use"
tags = ["tool-test", "single-turn", "tool-use", "train", "example", "debug"]
version = "0.1.1"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.2.post0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tool_test.py"]
