[project]
name = "vf-aime2025"
description = "AIME-25 evaluation environment"
tags = ["math", "eval", "single-turn"]
version = "0.1.5"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.2.post0",
    "pylatexenc",
    "sympy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_aime2025.py"]
